# estrutura-de-dados

./: CMakeLists.txt  Fibo  FiboRecursive  README.md  main  main.c  recursive.c
files/: exerciciostruct.c  listaNet.c  struct.c
files/pratica/: Estacionamento.c  Fibo.c  FiboRecursive.c  Lista1.c  ListaNet.c  recursive.c
